Make timeout configurable
Also make frequently accessed Strings constant (so they get interned)